--- a/index.html
+++ b/index.html
@@ -8,20 +8,13 @@
 		}
 		#text {
 			font-size: 72pt;
+			letter-spacing: 15pt;
 		}
 	</style>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
 	<img id="picture" src="">
-	<div id="text">
-		<span>П</span>
-		<span>Р</span>
-		<span>И</span>
-		<span>В</span>
-		<span>Е</span>
-		<span>Т</span>
-		<span>!</span>
-	</div>
+	<div id="text">ПРИВЕТ!</div>
 </body>
 </html>
