Thumbs up after successful guess

--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 			font-size: 72pt;
 			letter-spacing: 15pt;
 		}
+		#thumbsup {
+			visibility: hidden;
+		}
 	</style>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
-	<img id="picture" src="">
+	<div>
+		<img id="picture" src="">
+		<img id="thumbsup" src="thumbs-up.png">
+	</div>
 	<div id="text">ПРИВЕТ!</div>
 </body>
 </html>
