Generating pictures.js file by list of pictures in images directory

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			visibility: hidden;
 		}
 	</style>
+	<script type="text/javascript" src="js/pictures.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
