Showing picture caption at the top

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		body {
 			text-align: center;
 		}
+		#caption {
+			font-size: 24pt;
+		}
 		#text {
 			font-size: 72pt;
 			letter-spacing: 15pt;
@@ -18,6 +21,7 @@
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
+	<div id="caption">ПРИВЕТ!</div>
 	<div>
 		<img id="picture" src="">
 		<img id="thumbsup" src="thumbs-up.png">
