--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 			text-align: center;
 		}
 		#caption {
-			font-size: 24pt;
+			font-size: 36pt;
 		}
 		#text {
 			font-size: 72pt;
 			letter-spacing: 15pt;
 		}
 		#thumbsup {
-			visibility: hidden;
+			display: none;
 		}
 	</style>
 	<script type="text/javascript" src="js/pictures.js"></script>
@@ -23,8 +23,8 @@
 <body>
 	<div id="caption">ПРИВЕТ!</div>
 	<div>
-		<img id="picture" src="">
-		<img id="thumbsup" src="thumbs-up.png">
+		<img id="picture" height="400" src="">
+		<img id="thumbsup" height="256" src="thumbs-up.png">
 	</div>
 	<div id="text">ПРИВЕТ!</div>
 </body>
