Moving thumbs-up.jpg to assets directory

--- a/math.html
+++ b/math.html
@@ -24,7 +24,7 @@
 	<div id="caption">ПРИВЕТ!</div>
 	<div>
 		<img id="picture" height="400" src="">
-		<img id="thumbsup" height="256" src="thumbs-up.png">
+		<img id="thumbsup" height="256" src="assets/thumbs-up.png">
 	</div>
 	<div id="text">ПРИВЕТ!</div>
 </body>
