Exctracting common parts from main.js

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		}
 	</style>
 	<script type="text/javascript" src="js/pictures.js"></script>
+	<script type="text/javascript" src="js/words.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
