--- a/math.html
+++ b/math.html
@@ -2,16 +2,13 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>ПОДПИШИ КАРТИНКУ!</title>
+	<title>СОСЧИТАЙ ГОРШКИ!</title>
 	<style type="text/css">
 		body {
 			text-align: center;
 		}
-		#caption {
-			font-size: 36pt;
-		}
 		#text {
-			font-size: 72pt;
+			font-size: 108pt;
 			letter-spacing: 15pt;
 		}
 		#thumbsup {
@@ -19,13 +16,13 @@
 		}
 	</style>
 	<script type="text/javascript" src="js/math.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
-	<div id="caption">ПРИВЕТ!</div>
+	<div id="text">8 + 6 = 14</div>
 	<div>
-		<img id="picture" height="400" src="">
 		<img id="thumbsup" height="256" src="assets/thumbs-up.png">
 	</div>
-	<div id="text">ПРИВЕТ!</div>
+	<img src="assets/honeypot.png" height="70">
 </body>
 </html>
